Fix style overflow height bug on dashboard. Make grid instead of flex

--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,7 @@ code {
 .page-container{
   display: flex;
   width: 100%;
+  height: 100vh;
 }
 
 .aside{
@@ -70,6 +71,7 @@ code {
   display: flex;
   flex-direction: column;
   width: 100%;
+  
 }
 
 .page-title-container{
